# HICAR

./: .gitignore  README.md
helpers/: HICAR_Domain.py  HICAR_dom.yml  ProjHelpers.py  aggregate_parallel_files_par.py  filelist_script.sh  gen_HICAR_dom.py
helpers/ccsm/: __init__.py
run/: HICAR_Test_Case.nml  complete_hicar_options.nml  complete_icar_options.nml
src/: advect_diff.txt  driver_diff.txt  exch_diff.txt  makefile
src/.ipynb_checkpoints/: makefile-checkpoint
src/FSM_Interface/: CMakeCache.txt  CMakeLists.txt  CMakeLists_local.txt  Makefile  cmake_install.cmake  fortrandevs.code-workspace
src/FSM_Interface/code/: CANOPY.F90  CHECK_SNOWPACK.F90  CUMULATE.F90  DRIVE.F90  DUMP.F90  EBALFOR.F90  EBALSRF.F90  EBALSRF_SBG.F90  FRESH_SNOW_DENSITY.F90  FSM2.F90  HS_FROM_SWE.F90  LUDCMP.F90  LWRADTOPO.F90  MODE_WRITE.F90  MODULES.F90  OPEN_FILES.F90  PHYSICS.F90  RADIATION.F90  RADIATIONNN.F90  SETUP.F90  SFEXCH.F90  SNOW.F90  SNOWCOVERFRACTION.F90  SNOWSLIDE.F90  SNOWTRAN3D.F90  SNOW_ABLATION.F90  SNOW_LAYERING.F90  SOIL.F90  SWE_FROM_HS.F90  SWRADTOPO.F90  TABLER.F90  THERMAL.F90  TRIDIAG.F90  compil_FSM.bat
src/FSM_Interface/code/.ipynb_checkpoints/: CUMULATE-checkpoint.F90  DRIVE-checkpoint.F90  PHYSICS-checkpoint.F90  RADIATIONNN-checkpoint.F90  SETUP-checkpoint.F90  SNOW-checkpoint.F90
src/FSM_Interface/code/FSM_interface/: CUMULATE_interface.F90  DRIVE_interface.F90  FSM_inerface.F90  FSM_interface.F90  MODULES_interface.F90  PHYSICS_interface.F90  SETUP_interface.F90  SNOWSLIDE_interface.F90  SNOWTRAN3D_interface.F90
src/FSM_Interface/code/FSM_interface/.ipynb_checkpoints/: CUMULATE_interface-checkpoint.F90  DRIVE_interface-checkpoint.F90  MODULES_interface-checkpoint.F90  PHYSICS_interface-checkpoint.F90  SETUP_interface-checkpoint.F90  SNOWSLIDE_interface-checkpoint.F90  SNOWTRAN3D_interface-checkpoint.F90
src/FSM_Interface/doc/: doc_options.txt
src/FSM_Interface/nlst/: nlst_BDE_OSHD.nam  nlst_BDE_point_determ_OSHD.nam  nlst_Bafu250m_OSHD_for.nam  nlst_Bafu250m_OSHD_glc.nam  nlst_Bafu250m_hn_OSHD.nam  nlst_Flue2m_nested.nam  nlst_Flue2m_nested_for.nam  nlst_point_OSHD.nam  nlst_point_hn_OSHD.nam
src/FSM_Interface/test/: nlst_Bafu250m_OSHD.nam  test_FSM_interface.f90
src/constants/: icar_constants.f90  wrf_constants.f90
src/io/: default_output_metadata.f90  io_routines.f90  ioclient_h.f90  ioclient_obj.f90  ioserver_h.f90  ioserver_obj.f90  output_h.f90  output_obj.f90  reader_h.f90  reader_obj.f90  restart.f90
src/main/: data_structures.f90  driver.f90  init.f90  time_step.f90
src/objects/: boundary_h.f90  boundary_obj.f90  domain_h.f90  domain_obj.f90  exch_dict_h.f90  exch_dict_obj.f90  exchangeable_h.f90  exchangeable_obj.f90  grid_h.f90  grid_obj.f90  opt_types.f90  options_h.f90  options_obj.f90  variable_dict_obj.f90  variable_h.f90  variable_obj.f90
src/physics/: adv_fluxcorr.f90  adv_mpdata.f90  adv_mpdata_FCT_core.f90  (+29 more)
(+14 files in other folders)
